--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-04-14 Nicole Cordes  <cordes@cps-it.de>
+
+	* Release of cps_devlib 0.1.0
+
+2011-04-14 Nicole Cordes  <cordes@cps-it.de>
+
+	* Added manual
+
 2011-04-11 Nicole Cordes  <cordes@cps-it.de>
 
 	* Initial release
