--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2011-07-04 Nicole Cordes  <cordes@cps-it.de>
+
+	* Release of cps_devlib 0.5.1
+
+2011-07-04 Nicole Cordes  <cordes@cps-it.de>
+
+	* Changed status to stable
+	* Updated manual
+
 2011-06-23 Nicole Cordes  <cordes@cps-it.de>
 
 	* Release of cps_devlib 0.5.0
