--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-07-19 Nicole Cordes  <cordes@cps-it.de>
+
+	* Release of cps_devlib 0.6.0
+
+2011-07-19 Nicole Cordes  <cordes@cps-it.de>
+
+	* Added function tx_cpsdevlib_extmgm::getEndingSlash
+
 2011-07-04 Nicole Cordes  <cordes@cps-it.de>
 
 	* Release of cps_devlib 0.5.1
