--- a/ChangeLog
+++ b/ChangeLog
@@ -26,11 +26,15 @@
 
 2011-06-23 Nicole Cordes  <cordes@cps-it.de>
 
-	* Release of cps_devlib 0.4.2
+	* Release of cps_devlib 0.4.1
 
 2011-06-23 Nicole Cordes  <cordes@cps-it.de>
 
 	* Fixed autoload function for TYPO3 < 4.3 support
+
+2011-06-23 Nicole Cordes  <cordes@cps-it.de>
+
+	* Release of cps_devlib 0.4.0
 
 2011-06-23 Nicole Cordes  <cordes@cps-it.de>
 
